# codevs_reborn

./: .gitignore  Cargo.toml  Makefile  README.md  chain_score.py  generate_input.py  generate_pack.py  input.txt  parse_log.py  raw_input.txt  run.sh
benches/: my_benchmark.rs
input/: dead.in  dead1.in  error.in  initial.in  must_not_die.in  segfault.in  segfault1.in
input/information/: initial.info
sample/: Main.cpp  Main.cs  Main.java  Main.py  Main.rb
scripts/: analyze_pack.py  analyze_score.py  benchmark.py  create_pack_file.py  zobrist_hash_score_table.py  zobrist_hash_table.py
src/: bit_board.rs  board.rs  command.rs  evaluation.rs  field.rs  game_status.rs  lib.rs  main.rs  pack.rs  scanner.rs  search_result.rs  search_state.rs  simulator.rs  solver.rs  solver_config.rs  xorshift.rs  zobrist_hash_table.rs
