[package]
name = "togatog_ai"
version = "4.0.0"
authors = ["togatoga <togasakitogatoga@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~2.33"
csv = "1"
serde_derive = "1.0.90"
min-max-heap = "1.2.2"
fnv = "1.0.3"


[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "my_benchmark"
harness = false
